hphp/hack/test/typecheck/abstract_final_instance_property.php
<?hh
abstract final class Foo {
  public int $foobar;
}
